remove ID parameter from URL for update method, use in body
