# swagger.yaml
@@ -8,7 +8,8 @@ definitions:
       GenericError GenericError GenericError GenericError GenericError GenericError
       GenericError GenericError GenericError GenericError GenericError GenericError
       GenericError GenericError GenericError GenericError GenericError GenericError
-      GenericError is a generic error message returned by a server
+      GenericError GenericError GenericError is a generic error message returned by
+      a server
     properties:
       message:
         description: message
@@ -17,7 +18,7 @@ definitions:
     type: object
     x-go-package: github.com/oleksiivelychko/go-microservice/sdk/models
   Product:
-    description: Product Product Product defines the structure for an API product
+    description: Product Product defines the structure for an API product
     properties:
       description:
         description: description
@@ -68,7 +69,7 @@ definitions:
       ValidationError ValidationError ValidationError ValidationError ValidationError
       ValidationError ValidationError ValidationError ValidationError ValidationError
       ValidationError ValidationError ValidationError ValidationError ValidationError
-      is a collection of validation error messages
+      ValidationError ValidationError is a collection of validation error messages
     properties:
       messages:
         description: messages
@@ -165,6 +166,29 @@ paths:
           $ref: '#/responses/errorResponse'
       tags:
       - products
+    put:
+      description: Update a products details
+      operationId: updateProduct
+      parameters:
+      - description: |-
+          Product data structure to Update or Create.
+          Note: the id field is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/product'
+      responses:
+        "201":
+          $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
+        "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
   /products/{id}:
     delete:
       description: Delete a product
@@ -201,36 +225,6 @@ paths:
         "200":
           $ref: '#/responses/productResponse'
         "404":
-          $ref: '#/responses/errorResponse'
-      tags:
-      - products
-    put:
-      description: Update a products details
-      operationId: updateProduct
-      parameters:
-      - description: |-
-          Product data structure to Update or Create.
-          Note: the id field is ignored by update and create operations
-        in: body
-        name: Body
-        required: true
-        schema:
-          $ref: '#/definitions/product'
-      - description: The id of the product for which the operation relates
-        format: int64
-        in: path
-        name: id
-        required: true
-        type: integer
-        x-go-name: ID
-      responses:
-        "201":
-          $ref: '#/responses/productResponse'
-        "404":
-          $ref: '#/responses/errorResponse'
-        "422":
-          $ref: '#/responses/errorValidation'
-        "501":
           $ref: '#/responses/errorResponse'
       tags:
       - products
